1.4rc1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13112: Corrected the tutorial text.
- Fixed issue #13119: Replaced references to /tmp with createTempDir() calls.

1.4beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12993: Hierarchical caching does not prune items in the correct
  situation. Note that the internal structure of the stack meta data changed
  drastically with this fix. You need to reset() the whole storage after this
  update.


1.4alpha1 - Monday 05 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #12587: Hierachic caching for the Cache component. The
  class ezcCacheStack and related classes provide that feature.
- Fixed issue #12666: ezcCacheStorageMemcache potentially creates multiple
  connections to the same memcached server.


1.3 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.3beta1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11888: Small fixes to PHPDoc in memory_backend.php.


1.3alpha1 - Monday 29 October 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #10533: ezcCacheManager::getCache does not support delayed
  initialization.
- Fixed issue #11064: Marked search() as protected in ezcCacheStorageFile.
- Implemented feature request #11049: Added APC and Memcache backends for
  caching. Based on a patch from Grady Kuhnline.
- Fixed issue #11181: A physical location is not required anymore for pure
  memory backends.
- Fixed issue #11413: The search flag is off by default for restore() and
  delete().
- Fixed issue #11138: The validateLocation() method is defined as abstract in
  ezcCacheStorage.


1.2 - Monday 02 July 2007